--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,15 +6,19 @@ build-backend = "setuptools.build_meta"
 name = "teyvat-lore-graph"
 version = "0.1.0"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.12,<3.13"
 dependencies = [
-    "langchain>=1.2.8",
+    "beautifulsoup4>=4.14.3",
+    "langchain>=1.2.9",
     "langchain-community>=0.4.1",
-    "langchain-google-genai>=4.2.0",
-    "neo4j>=6.1.0",
-    "pydantic>=2.12.5",
-    "python-dotenv>=1.2.1",
-    "streamlit>=1.53.1",
+    "langchain-core>=1.2.9",
+    "langchain-google-genai",
+    "langchain-neo4j>=0.8.0",
+    "neo4j",
+    "pydantic",
+    "python-dotenv",
+    "requests>=2.32.5",
+    "streamlit",
 ]
 
 [tool.setuptools.packages.find]
