--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,9 @@ dependencies = [
     "langchain-community>=0.4.1",
     "langchain-core>=1.2.9",
     "langchain-google-genai",
+    "langchain-groq>=1.1.2",
     "langchain-neo4j>=0.8.0",
+    "langchain-ollama>=1.0.1",
     "neo4j",
     "pydantic",
     "python-dotenv",
