--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 requires-python = ">=3.12,<3.13"
 dependencies = [
     "beautifulsoup4>=4.14.3",
+    "chromadb>=1.5.0",
     "langchain>=1.2.9",
     "langchain-community>=0.4.1",
     "langchain-core>=1.2.9",
@@ -20,6 +21,7 @@ dependencies = [
     "pydantic",
     "python-dotenv",
     "requests>=2.32.5",
+    "sentence-transformers>=5.2.2",
     "streamlit",
 ]
 
